--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,98 @@
-HELP.md
+# Arquivos java compilados
+*.class
+
+# Arquivos de package
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Dependências Maven
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Arquivos Graddle
+.gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+gradlew
+gradlew.bat
+gradle-wrapper.jar
+gradle-wrapper.properties
 
-### VS Code ###
+# Arquivos Terraform
+*.tfstate
+*.tfstate.*.backup
+*.tfstate.backup
+*.tfvars
+*.terraform**
+
+# Arquivos IDEA
+*.iml
+.idea/
+*.iws
+
+# Arquivos IDE Eclipse
+*.project
+*.classpath
+*.settings/
+
+# Arquivos temp
+*.log
+*.tmp
+*.bak
+*.swp
+*~.nib
+
+# Arquivos gerados pelo OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Outros
+*.pid
+*.seed
+*.pid.lock
+*.class
+*.pyc
+*.swp
+.history
 .vscode/
+
+# HELP.md
+# target/
+# !.mvn/wrapper/maven-wrapper.jar
+# !**/src/main/**/target/
+# !**/src/test/**/target/
+
+# ### STS ###
+# .apt_generated
+# .classpath
+# .factorypath
+# .project
+# .settings
+# .springBeans
+# .sts4-cache
+
+# ### IntelliJ IDEA ###
+# .idea
+# *.iws
+# *.iml
+# *.ipr
+
+# ### NetBeans ###
+# /nbproject/private/
+# /nbbuild/
+# /dist/
+# /nbdist/
+# /.nb-gradle/
+# build/
+# !**/src/main/**/build/
+# !**/src/test/**/build/
+
+# ### VS Code ###
+# .vscode/
