--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -8,10 +8,9 @@ on:
       - src
 
 env:
-  REGISTRY: 
-  IMAGE_REPOSITORY: 
+  REGISTRY: 794196173640.dkr.ecr.us-east-1.amazonaws.com
+  IMAGE_REPOSITORY: capibytes-backend-repo
   AWS_REGION: us-east-1
-  DOCKER_SERVICES:
 
 permissions:
   id-token: write # Permissão para acessar AWS por OpenID
@@ -27,14 +26,14 @@ jobs:
 
 
       - name: Configurar credenciais AWS
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.IAM_ROLE }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Extrair metadados a partir do repo
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_REPOSITORY }}
           tags: |
@@ -43,13 +42,13 @@ jobs:
             latest=auto
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Build e Push da imagem Docker
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v
         with:
           context: .
           push: true
@@ -57,20 +56,20 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push-image
-    steps:
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-push-image
+  #   steps:
 
-      - name: Deploy no servidor usando SSH
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.ACTIONS_USER }}
-          key: ${{ secrets.ACTIONS_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          script: |
-            cd ${{ secrets.DEPLOY_DIR }} 
-            aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.REGISTRY }}
-            docker-compose up -d ${{ env.DOCKER_SERVICES }}
-            docker image prune -a -f
+  #     - name: Deploy no servidor usando SSH
+  #       uses: appleboy/ssh-action@v0.1.10
+  #       with:
+  #         host: ${{ secrets.HOST }}
+  #         username: ${{ secrets.ACTIONS_USER }}
+  #         key: ${{ secrets.ACTIONS_KEY }}
+  #         port: ${{ secrets.SSH_PORT }}
+  #         script: |
+  #           cd ${{ secrets.DEPLOY_DIR }} 
+  #           aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.REGISTRY }}
+  #           docker-compose up -d ${{ env.DOCKER_SERVICES }}
+  #           docker image prune -a -f
