--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build e Push da imagem Docker
-        uses: docker/build-push-action@v
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
