configura ambiente prod

--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -22,6 +22,8 @@ jobs:
       - name: Capturando código atualizado
         uses: actions/checkout@v4
 
+      - name: Mudar ambiente para prod
+        uses: echo "spring.profiles.active=prod" > src/main/resources/application.properties
 
       - name: Configurar credenciais AWS
         uses: aws-actions/configure-aws-credentials@v4
