atualização dockerfile e deploy back

--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -62,20 +62,20 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-push-image
-  #   steps:
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    steps:
 
-  #     - name: Deploy no servidor usando SSH
-  #       uses: appleboy/ssh-action@v0.1.10
-  #       with:
-  #         host: ${{ secrets.HOST }}
-  #         username: ${{ secrets.ACTIONS_USER }}
-  #         key: ${{ secrets.ACTIONS_KEY }}
-  #         port: ${{ secrets.SSH_PORT }}
-  #         script: |
-  #           cd ${{ secrets.DEPLOY_DIR }} 
-  #           aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.REGISTRY }}
-  #           docker-compose up -d ${{ env.DOCKER_SERVICES }}
-  #           docker image prune -a -f
+      - name: Deploy no servidor usando SSH
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.ACTIONS_USER }}
+          key: ${{ secrets.ACTIONS_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd ${{ secrets.DEPLOY_DIR }} 
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.REGISTRY }}
+            docker-compose up -d ${{ env.DOCKER_SERVICES }}
+            docker image prune -a -f
