--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.1'
 services:
 
   datalytics-app:
-    build: .
+    image: 794196173640.dkr.ecr.us-east-1.amazonaws.com/capibytes-backend-repo:latest
     ports:
       - "80:8080"
     environment:
-      DB_PASSWORD: db_password
-      PGUSER: db_username
+      DB_PASSWORD: "${db_password}"
+      PGUSER: "${db_username}"
       DB_URL: "jdbc:postgresql://capibytes-db.cmw2whm4hmzl.us-east-1.rds.amazonaws.com:5432/postgres"
