--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: '3.1'
+version: '3.8'
 
 services:
 
   datalytics-app:
+    pull_policy: always
     image: 794196173640.dkr.ecr.us-east-1.amazonaws.com/capibytes-backend-repo:latest
     ports:
       - "80:8080"
