corrigindo o traço do do comando docker compose

--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -78,5 +78,5 @@ jobs:
             cd ${{ secrets.DEPLOY_DIR }} 
             git pull
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.REGISTRY }}
-            docker-compose up -d 
+            docker compose up -d 
             docker image prune -a -f
