--- a/.github/workflows/deploy_backend.yaml
+++ b/.github/workflows/deploy_backend.yaml
@@ -78,5 +78,7 @@ jobs:
             cd ${{ secrets.DEPLOY_DIR }} 
             git pull
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.REGISTRY }}
+            export db_password=${{ secrets.DB_PASSWORD }} 
+            export db_username=${{ secrets.DB_USERNAME }}
             docker compose up -d 
             docker image prune -a -f
